@startuml
class Enemy.SlowZombie {
+ <<Create>> SlowZombie(float,float)
# void moveTowards(Player)
+ void Attackplayer(Player)
+ javafx.scene.paint.Color getEnemyColor()
}

class Enemy.HeavyZombie {
+ <<Create>> HeavyZombie(float,float)
+ void Attackplayer(Player)
+ javafx.scene.paint.Color getEnemyColor()
}

class Enemy.zombie {
+ <<Create>> zombie(float,float)
+ void Attackplayer(Player)
}

class Enemy.juggernaut {
+ <<Create>> juggernaut(float,float)
+ void Attackplayer(Player)
+ javafx.scene.paint.Color getEnemyColor()
}

class Enemy.AnimalZombies {
+ <<Create>> AnimalZombies(float,float)
+ void Attackplayer(Player)
+ javafx.scene.paint.Color getEnemyColor()
}

class Enemy.Screamers {
+ <<Create>> Screamers(float,float)
+ void Attackplayer(Player)
+ javafx.scene.paint.Color getEnemyColor()
}

abstract class Enemy.BaseEnemy {
# int hp
# int maxHp
# int speed
# int strength
# float x
# int width
# boolean isHit
# long lastAttackTime
# long attackCooldown
+ <<Create>> BaseEnemy(int,int,int,float,float)
+ void update(Player)
# void moveTowards(Player)
# boolean isCooldownReady()
# void resetCooldown()
+ Rectangle getBounds()
+ void takeDamage(int)
+ boolean isDead()
+ int getHP()
+ void setHP(int)
+ int getWidth()
+ void setWidth(int)
+ int getHeight()
+ void setHeight(int)
+ int getX()
+ int getY()
+ int getMaxHp()
+ javafx.scene.paint.Color getEnemyColor()
}


class Enemy.Runners {
+ <<Create>> Runners(float,float)
+ void Attackplayer(Player)
+ javafx.scene.paint.Color getEnemyColor()
}



Enemy.BaseEnemy <|-- Enemy.SlowZombie
Enemy.BaseEnemy <|-- Enemy.HeavyZombie
Enemy.BaseEnemy <|-- Enemy.zombie
Enemy.BaseEnemy <|-- Enemy.juggernaut
Enemy.BaseEnemy <|-- Enemy.AnimalZombies
Enemy.BaseEnemy <|-- Enemy.Screamers
Interface.Attackable <|.. Enemy.BaseEnemy
Enemy.BaseEnemy <|-- Enemy.Runners
@enduml